Fixing alignments mainly and tidying things up

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,6 @@
 }
 
   * {
-      box-sizing: border-box;
       padding: 0;
       margin: 0;
   }
@@ -62,30 +61,25 @@ a {
   #baerGardenParty {
       display: flex;
       max-height: 50%;
-      max-width: 49%;
+      max-width: 45%;
       float: right;
-      margin-top: 1%;
-      margin-bottom: 1%;
-      position: relative;
+      position: static;
   }
 
   .aboutMe {
-      padding: 1%;
-      float: left;
+      padding: 3%;
       background-color: var(--tyrian-purple);
-      margin-top: 15%;
+      margin-top: 2%;
       display: block;
       border-radius: 3%;
-      margin-right: 1%;
-      max-height: 100%;
-      max-width: 50%;
-      justify-content: center;
-      position: relative;
-
+      margin-right: 2%;
+      margin-left: 3%;
+      max-height: 200%;
+      max-width: 40%;
   }
 
   .aboutMe h2 {
-      font-size: 2.4vw;
+      font-size: 3.4vw;
       padding: 8px;
       background-color: var(--dark-orange);
       border-width: 30px black;
@@ -108,7 +102,7 @@ a {
   .aboutMeText {
       margin: 5%;
       margin-top: -3%;
-      font-size: 1.3vw;
+      font-size: 1.7vw;
       color: wheat;
       display: flex;
       flex-direction: column;
@@ -121,12 +115,20 @@ a {
   }
 
   .myProjects {
-      padding: 5px;
-
+      padding: 1%;
+      background-color: var(--ruby-red);
+      margin-top: 13%;
+      display: block;
+      border-radius: 5%;
+      margin-right: 1%;
+      max-height: 100%;
+      max-width: 100%;
+      justify-content: center;
+      position: static;
   }
 
 
-  .myProjects h2 {
+  .myProjects h3 {
       font-size: 2.4vw;
       padding: 2px;
       background-color: var(--dark-orange);
@@ -135,20 +137,23 @@ a {
       border: 1px solid #CCC;
       text-align: center;
       border-radius: 10px;
-     
       position: static;
   }
 
   #dMMP {
       display: flex;
-      max-height: 2%;
-      max-width: 2%;
+      max-height: 40%;
+      max-width: 40%;
+      position: static;
+      border-radius: 10px;
+      align-self: center;
+      
   }
 
 
 
 
-  footer h2 {
+  .footer h2 {
       font-size: 2.4vw;
       padding: 2px;
       background-color: var(--dark-orange);
